fixed overflow hidden issue. you can scroll on mobile devices now, and the backgroun image is fixed (it doesn't shrink)

--- a/style.css
+++ b/style.css
@@ -11,10 +11,11 @@ body {
 	/* linear-gradient(45deg, #ff00ff, #ffcc00, #00ff00, #00ffff, #0000ff); */
 	background-image: url("./assets/mc-cloud.webp");
 	background-size: cover;
+	background-attachment: fixed;
 	margin: 0;
 	padding: 0;
 	height: 100vh;
-	overflow: hidden;
+	overflow-x: hidden;
 	/* color: yellow; */
 	font-family: "Comic Sans MS", serif;
 	text-align: center;
